<resources>
    <string name="com_kakao_alert_appKey">need to declare com.kakao.sdk.AppKey in your AndroidManifest.xml</string>
    <string name="com_kakao_alert_install_kakaotalk">Please update KakaoTalk to the latest version.</string>
    <string name="com_kakao_alert_uri_too_long">Failed to send message because it exceeds the message size limit. Please contact the app administrator.</string>
    <string name="kakao_app_key">66da9358c6cd52a30ab7e7fe767ad7ae</string>
    <string name="kakao_scheme">kakao66da9358c6cd52a30ab7e7fe767ad7ae</string>
    <string name="kakaolink_host">kakaolink</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyB5OQ0Mj9Wmbsj2WS-7bg98S6spZ_1NfCs</string>
    <string name="app_name">Travelbook</string>
    <string name="facebook_app_id">674410489376071</string>
    <string name="fb_login_protocol_scheme">fb674410489376071</string>
    <string name="txt_guide_app_finish">\'뒤로\'버튼을 한번 더 누르시면 종료됩니다.</string>
    <string name="txt_no_data">No data found.</string>
    <string name="hello_world">Hello world</string>
    <string name="txt_001">Enter Your E-mail Address</string>
    <string name="txt_002">Enter Your Name</string>
    <string name="txt_003">Enter Your Password (at least 8 characters and )</string>
    <string name="txt_004">Continue</string>
    <string name="txt_005">Get started</string>
    <string name="txt_006">Log in with your TRAVELBOOK Account</string>
    <string name="txt_007">Welcome to Travelbook! See more of beautiful earth with friends!</string>
    <string name="txt_008">I forget my ID or Password</string>
    <string name="txt_009">Sign-up</string>
    <string name="txt_010">Log in</string>
    <string name="txt_011">Verify your e-mail account with Travelbook</string>
    <string name="txt_012">Get started Travelbook</string>
    <string name="txt_013">Recive a Travelbook Guard code via e-mail</string>
    <string name="txt_014">Back</string>
    <string name="txt_015">Travelbook sent a Travelbook Guard code e-mail to this account. Thank you.</string>
    <string name="txt_016">Travelbook friends</string>
    <string name="txt_017">Following</string>
    <string name="txt_018">Unfollow</string>
    <string name="txt_019">Find your contacts</string>
    <string name="txt_020">Invite your friends</string>
    <string name="txt_021">More</string>
    <string name="txt_022">Grid view</string>
    <string name="txt_023">Detail view</string>
    <string name="txt_024">Bookmarks</string>
    <string name="txt_025">Travelbook View</string>
    <string name="txt_026">Unfollow OOOO?</string>
    <string name="txt_027">Cancel</string>
    <string name="txt_028">Unfollow</string>
    <string name="txt_029">OOOO\'s official account.</string>
    <string name="txt_030">Follow Everyone</string>
    <string name="txt_031">Follow OOOO !</string>
    <string name="txt_032">Not link your contacts.</string>
    <string name="txt_033">"You will find friends better as you sync contacts.</string>
    <string name="txt_034">If you discconected it, your contacts are deleted."</string>
    <string name="txt_035">Cancel</string>
    <string name="txt_036">Disconnected/Not linked</string>
    <string name="txt_037">Report a Problem</string>
    <string name="txt_038">Share</string>
    <string name="txt_039">Spam</string>
    <string name="txt_040">False or misleading contents</string>
    <string name="txt_041">Sexually suggetive contents</string>
    <string name="txt_042">Abusive contents</string>
    <string name="txt_043">Violent contets</string>
    <string name="txt_044">Selling illegal items</string>
    <string name="txt_045">Intellectual property rights Infringement</string>
    <string name="txt_046">Are you reporting it by ~</string>
    <string name="txt_047">Completed</string>
    <string name="txt_048">Copy share URL</string>
    <string name="txt_049">Edit</string>
    <string name="txt_050">Remove / Delete</string>
    <string name="txt_051">Confirm Deletion- Delete this photo?- Don\'t delete/ Delete</string>
    <string name="txt_052">Following</string>
    <string name="txt_053">News</string>
    <string name="txt_054">Events</string>
    <string name="txt_055">Like 00\'s posts</string>
    <string name="txt_056">like your posts</string>
    <string name="txt_057">See all of 00 comments</string>
    <string name="txt_058">\'s post as Bookmark?</string>
    <string name="txt_059">Travelbook bookmarks</string>
    <string name="txt_060">All</string>
    <string name="txt_061">User</string>
    <string name="txt_062">Tag</string>
    <string name="txt_063">The latest browsing history</string>
    <string name="txt_064">commented your post.</string>
    <string name="txt_065">follow.</string>
    <string name="txt_066">11 likes 00\'s post.</string>
    <string name="txt_067">11 commented 00\'s post.</string>
    <string name="txt_068">11 follow 00\'s post.</string>
    <string name="txt_069">00 likes your post.</string>
    <string name="txt_070">11 mentioned 00.</string>
    <string name="txt_071">00 commented your post.</string>
    <string name="txt_072">Follow</string>
    <string name="txt_073">Posts</string>
    <string name="txt_074">Followers</string>
    <string name="txt_075">Following</string>
    <string name="txt_076">current events</string>
    <string name="txt_077">see all of events</string>
    <string name="txt_078">00\'s official account.</string>
    <string name="txt_079">Unfollow 00?</string>
    <string name="txt_080">Update your profile</string>
    <string name="txt_081">Use Travelbook Camera</string>
    <string name="txt_082">From your gallery</string>
    <string name="txt_083">Remove your profile photo</string>
    <string name="txt_084">Name</string>
    <string name="txt_085">Introduce yourself</string>
    <string name="txt_086">Webpages</string>
    <string name="txt_087">Contry/Region</string>
    <string name="txt_088">Enter Your E-mail Address</string>
    <string name="txt_089">Phone number</string>
    <string name="txt_090">Completed</string>
    <string name="txt_091">Find your contacts</string>
    <string name="txt_092">Invite your friends</string>
    <string name="txt_093">Account</string>
    <string name="txt_094">Update your profile</string>
    <string name="txt_095">Change your password</string>
    <string name="txt_096">People of 152 in your contacs use Travelbook</string>
    <string name="txt_097">Follow Everyone</string>
    <string name="txt_098">You Invited your friends</string>
    <string name="txt_099">Invite your friends</string>
    <string name="txt_100">Enter Your Current password</string>
    <string name="txt_101">Enter Your New Password </string>
    <string name="txt_102"> (at least 8 characters)</string>
    <string name="txt_103">Enter Your New Password Again</string>
    <string name="txt_104">Change your password</string>
    <string name="txt_105">Your password is changed. Thank you.</string>
    <string name="txt_106">Posts you like</string>
    <string name="txt_107">Private Account</string>
    <string name="txt_108">When your account is private, only people you approve can see your posts.</string>
    <string name="txt_109">Is your account private?</string>
    <string name="txt_110">Private Account</string>
    <string name="txt_111">Delete your browsing history.</string>
    <string name="txt_112">When you delete your browsing history, it will be permanetly removed. Delete your browsing histrory?</string>
    <string name="txt_113">Remove</string>
    <string name="txt_114">Log-out</string>
    <string name="txt_115">Log-out TravelBook?</string>
    <string name="txt_116">Logged-out of Travelbook. Thank you for using Travelbook.</string>
    <string name="txt_117">Delete your Travelbook account</string>
    <string name="txt_118">When you delete your account, your profile, photos, videos, comments, likes and followers will be permanetly removed. Delete your account?</string>
    <string name="txt_119">Delete your Travelbook account</string>
    <string name="txt_120">Your Travelbook account are deleted.</string>
    <string name="txt_121">Report a Problem</string>
    <string name="txt_122">Support</string>
    <string name="txt_123">Travelbook Help Center</string>
    <string name="txt_124">About Travelbook</string>
    <string name="txt_125">Privacy Notice</string>
    <string name="txt_126">Conditions of Use</string>
    <string name="txt_127">Conditions of GPS ?</string>
    <string name="txt_128">Settings</string>
    <string name="txt_129">Linked settings</string>
    <string name="txt_130">Connected accounts</string>
    <string name="txt_131">Notifications</string>
    <string name="txt_132">Push notifications</string>
    <string name="txt_133">From Everyone</string>
    <string name="txt_134">From People I follow</string>
    <string name="txt_135">Off</string>
    <string name="txt_136">Yon may set as \'Home first\'</string>
    <string name="txt_137">Yon may set as \'Browsing first</string>
    <string name="txt_138">Yon may set as \'Camera first</string>
    <string name="txt_139">Yon may set as \'News first</string>
    <string name="txt_140">Yon may set as \'Your Account first\'</string>
    <string name="txt_141">Invite your friends!</string>
    <string name="txt_142">check</string>
    <string name="txt_143">팔로잉중</string>
    <string name="txt_144">팔로잉 취소는 팔로잉리스트에서 가능합니다.</string>
    <string name="txt_145">님을 팔로잉 하시겠습니까?</string>
    <string name="txt_146">좋아요</string>
    <string name="txt_147">님과 이미 친구 입니다.</string>
    <string name="txt_148">다시 시도해 주세요</string>
    <string name="txt_149">올바른 형식이 아닙니다.</string>
    <string name="txt_150">회원가입을 취소 하시겠습니까?</string>
    <string name="txt_151">이메일을 확인 바랍니다.</string>
    <string name="txt_152">서비스 준비중 입니다.</string>
    <string name="txt_153">연락처를 수집하고 있습니다.</string>
    <string name="txt_154">새로운 비밀번호가 일치하지 않습니다.</string>
    <string name="txt_155">모든 친구를 팔로잉 중 입니다.</string>
    <string name="txt_156">댓글을 입력해주세요.</string>
    <string name="txt_157">댓글을 삭제하시겠습니까?</string>
    <string name="txt_158">즐겨찾기</string>
    <string name="txt_159">네트워크가 활성화 되지 않았습니다.\n3G/4G 혹은 Wifi를 켜주시기 바랍니다.</string>
    <string name="txt_160">게시하기</string>
    <string name="txt_161">게시글 쓰기...</string>
    <string name="txt_162">내용을 입력해 주세요.</string>
    <string name="txt_163">이미지를 최소 1장 이상 선택해 주세요.</string>
    <string name="txt_164">앱에서 내 위치 정보를 사용하려면, 단말기의 설정에서 위치서비스 사용을 허용해주세요.</string>
    <string name="txt_165">설정하기</string>
    <string name="txt_166">현재위치</string>
    <string name="txt_167">Goolgle Play 서비스를 업데이트해 주세요.</string>
    <string name="txt_168">시스템 설정에서 위치정보서비스(Wi-Fi, 모바일네트워크)를 사용하도록 설정해주세요.</string>
    <string name="txt_169">현재 위치정보를 가져올 수 없습니다.</string>
    <string name="txt_170">소개하는 글</string>
    <string name="txt_171">신고할 대상이 없습니다.</string>
    <string name="txt_172">Places</string>
    <string name="txt_173">Add Location</string>
    <string name="txt_174">Searching for \'0000\'</string>
    <string name="txt_175">Near Current Location</string>
    <string name="txt_176">Blocked Users</string>
    <string name="txt_177">문제신고</string>
    <string name="txt_178">공유하기</string>
    <string name="txt_179">카카오톡 공유하기</string>
    <string name="txt_180">Blocking user</string>
    <string name="txt_181">Share</string>
    <string name="txt_182">Kakao Share</string>
    <string name="txt_183">Edit</string>
    <string name="txt_184">Delete</string>
    <string name="txt_185">본 게시물의 유저를 차단 하시겠습니까?</string>
    <string name="txt_186">Comments</string>
    <string name="txt_187">Done</string>
    <string name="txt_206">사용하실 이름을 입력해 주세요.</string>
    <string name="txt_207">이메일 주소를 입력해 주세요.</string>
    <string name="txt_208">비밀번호를 입력해 주세요.</string>
    <string name="txt_209">로그인 화면</string>
    <string name="txt_210">으로</string>
    <string name="txt_212">전송하기</string>
    <string name="txt_215">이름을 입력해 주세요</string>
</resources>