<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@android:color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="92dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="218dp"
                    android:layout_height="68.5dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/logo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="33dp"
                android:layout_marginRight="33dp"
                android:layout_marginTop="71dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="14.5dp"
                        android:layout_height="17.5dp"
                        android:layout_marginBottom="6dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="22dp"
                        android:src="@drawable/signup_sign_up" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edtName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:background="@null"
                        android:hint="@string/txt_206"
                        android:inputType="textEmailAddress"
                        android:maxLength="64"
                        android:maxLines="1"
                        android:privateImeOptions="defaultInputmode=english"
                        android:textColor="@color/color_3f3f3f"
                        android:textSize="14.5dp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="32.5dp"
                    android:background="@color/color_4167b2" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="14.5dp"
                        android:layout_height="11.5dp"
                        android:layout_marginBottom="9dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="23dp"
                        android:src="@drawable/signup_mail" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="7dp"
                        android:background="@null"
                        android:hint="@string/txt_207"
                        android:inputType="textEmailAddress"
                        android:maxLength="64"
                        android:maxLines="1"
                        android:textColor="@color/color_3f3f3f"
                        android:textSize="14.5dp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="32.5dp"
                    android:background="@color/color_4167b2" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="15.5dp"
                        android:layout_height="12.5dp"
                        android:layout_marginBottom="6dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="24dp"
                        android:src="@drawable/signup_password" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edtPwd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="7dp"
                        android:background="@null"
                        android:hint="@string/txt_208"
                        android:inputType="textPassword"
                        android:maxLength="64"
                        android:maxLines="1"
                        android:minEms="8"
                        android:textColor="@color/color_3f3f3f"
                        android:textSize="14.5dp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginBottom="32.5dp"
                    android:background="@color/color_4167b2" />

                <Button
                    android:id="@+id/btnRegist"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="42.5dp"
                    android:layout_marginTop="44dp"
                    android:background="@drawable/shape_bg_radius_accent"
                    android:text="@string/txt_009"
                    android:textColor="@android:color/white"
                    android:textSize="17dp" />

                <LinearLayout
                    android:id="@+id/go_login_lay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="11.5dp"
                        android:layout_height="10dp"
                        android:layout_marginRight="5dp"
                        android:src="@drawable/signup_arrow" />
                    \

                    <TextView
                        android:id="@+id/go_login_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_209"
                        android:textColor="@color/color_aa4167b2"
                        android:textSize="12dp" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_210"
                        android:textColor="@color/color_aa4167b2"
                        android:textSize="12dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>