<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@android:color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/baseFind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="73dp"
                android:layout_marginLeft="34dp"
                android:layout_marginRight="34dp"
                android:layout_marginTop="92dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="217.5dp"
                    android:layout_height="68dp"
                    android:layout_gravity="center"
                    android:src="@drawable/login_logo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="85dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="14.5dp"
                        android:layout_height="17.5dp"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="7dp"
                        android:layout_marginLeft="19dp"
                        android:layout_marginRight="20dp"
                        android:src="@drawable/signup_sign_up" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edtName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="7dp"
                        android:background="@null"
                        android:hint="@string/txt_215"
                        android:inputType="textEmailAddress"
                        android:maxLength="64"
                        android:maxLines="1"
                        android:textColor="@color/color_3f3f3f"
                        android:textSize="14.5dp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/color_cccccc" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="38dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="14.5dp"
                        android:layout_height="11.5dp"
                        android:layout_gravity="bottom"
                        android:layout_marginBottom="9dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20.5dp"
                        android:src="@drawable/signup_mail" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="7dp"
                        android:background="@null"
                        android:hint="@string/txt_207"
                        android:inputType="textEmailAddress"
                        android:maxLength="64"
                        android:maxLines="1"
                        android:textColor="@color/color_3f3f3f"
                        android:textSize="14.5dp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/color_cccccc" />

                <Button
                    android:id="@+id/btnTemPwd"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="42.5dp"
                    android:layout_marginBottom="36dp"
                    android:layout_marginTop="70dp"
                    android:background="@drawable/shape_bg_radius_accent"
                    android:text="@string/txt_212"
                    android:textColor="@android:color/white"
                    android:textSize="17dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/go_login_lay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="11.5dp"
                        android:layout_height="10dp"
                        android:layout_marginRight="5dp"
                        android:src="@drawable/signup_arrow" />

                    <TextView
                        android:id="@+id/go_login_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_209"
                        android:textColor="@color/color_aa4167b2"
                        android:textSize="12dp" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_210"
                        android:textColor="@color/color_aa4167b2"
                        android:textSize="12dp" />
                </LinearLayout>
            </LinearLayout>

            <!--<LinearLayout-->
            <!--android:id="@+id/baseResult"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_centerInParent="true"-->
            <!--android:layout_margin="25dp"-->
            <!--android:orientation="vertical">-->

            <!--<TextView-->
            <!--android:id="@+id/resultMsg"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="76dp"-->
            <!--android:gravity="center_horizontal"-->
            <!--android:textColor="@drawable/color_mint"-->
            <!--android:textSize="25sp"-->
            <!--android:textStyle="bold" />-->
            <!--</LinearLayout>-->
        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>
</RelativeLayout>